# p2d

./: .env.example  .gitignore  DOCKER.md  GEMINI.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsc_output.txt  tsc_output_2.txt  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: AI_SUMMARY.md  P2D_仕様書.md
signaling-server/: Dockerfile  docker-compose.yml  package-lock.json  package.json
signaling-server/src/: index.ts  roomManager.ts  types.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChatPanel.tsx  HostView.tsx  QualitySettings.tsx  RoomView.tsx  StatsOverlay.tsx  ViewerView.tsx  VoiceChatPanel.tsx
src/hooks/: useDataChannel.ts  useWebRTC.ts
src/lib/: adaptiveController.ts  bandwidthMonitor.ts  dataChannel.ts  signalingClient.ts
src/stores/: connectionStore.ts
src/styles/: index.css
