[package]
name = "p2d"
version = "0.1.0"
description = "P2P Desktop Sharing Application"
authors = ["P2D Team"]
edition = "2021"

[lib]
name = "p2d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3"
arboard = "3.4"
